--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -284,7 +284,7 @@ ggplot(merged_healthdata_df, aes(x = Period, y = DollarPerCoveragePoint, group =
   geom_line(size = 1) +      
   geom_point(size = 2) +     
   labs(
-    title = "Dollar per Coverage Point over Tijd",
+    title = "Dollar per Coverage Point over time",
     x = "Periode",
     y = "Dollar per Coverage Point",
     color = "Regio"
@@ -295,7 +295,7 @@ ggplot(merged_healthdata_df, aes(x = Period, y = DeathsPerSpending, group = Regi
   geom_line(size = 1) +
   geom_point(size = 2) +
   labs(
-    title = "Child Deaths per Spending over Tijd",
+    title = "Child Deaths per Spending over time",
     x = "Periode",
     y = "Child Deaths per Spending",
     color = "Regio"
@@ -479,8 +479,8 @@ ggplot(plot_data, aes(x = Group, y = Value, fill = FillGroup)) +
     "Bottom 3 - AvgChildDeath"= "#c5b0d5"   # Lichtpaars
   )) +
   labs(
-    title = "Gemiddelde waarden voor Top & Bottom 3 WHO-regio’s (2022)",
-    subtitle = "Gezondheidsuitgaven, vaccinatiegraad en kindersterfte per categorie",
+    title = "Average values for Top & Bottom 3 WHO-regions (2022)",
+    subtitle = "Health Expenditures, Vaccination Rate and Child Death per category",
     x = NULL,
     y = NULL,
     fill = NULL
